--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -4,4 +4,143 @@ permalink: /
 layout: "layouts/base.html"
 ---
 
-<h1 class="text-4xl text-blue-700">hello world</h1>
+<div class="bg-cover bg-center bg-no-repeat w-full min-h-screen flex items-end relative overflow-hidden" style="background-image: url(/assets/img/bg-home-hero.png);">
+	<div class="block md:hidden absolute bottom-0 inset-x-0 bg-gradient-to-t from-pink-dark h-2/5 z-10"></div>
+	<div class="absolute right-0 -bottom-3 md:-bottom-6 z-20">
+		<img src="/assets/img/section-shape.svg" alt="shape image">
+	</div>
+	<div class="container pb-16 md:pb-24 relative z-40">
+		<div class="hidden lg:block absolute right-0 bottom-9 pr-4 z-30">
+			<img src="/assets/img/icon-arrow-down.png" class="h-12 xl:h-[70px]" alt="arrow down">
+		</div>
+		<div class="block lg:hidden absolute right-0 -bottom-6 md:bottom-3.5 pr-4 z-30">
+			<img src="/assets/img/icon-menu-bar.png" class="h-14 xl:h-[70px]" alt="arrow down">
+		</div>
+		<div class="w-full sm:w-3/4 md:w-full lg:w-2/3 xl:w-3/4 2xl:w-3/5">
+			<span class="text-white text-lg/[22px] md:text-[22px]/[27px] block pb-2">Dé cosmetische beauty specialist in de Hoeksche Waard</span>
+			<h1 class="font-bold text-h-4 md:text-5xl lg:text-h-2 xl:text-7xl 2xl:text-h-1 text-white">Jouw beautygeheim heet <span class="text-lime">FillerHouse</span></h1>
+		</div>
+	</div>
+</div>
+
+<div class="bg-pink-medium relative overflow-hidden">
+	<div class="absolute top-0 -left-5 lg:left-[66px]">
+		<img src="/assets/img/kiss-pink.png" class="h-[10.5rem]" alt="pink kiss image">
+	</div>
+	<div class="container pt-18 md:pt-20 lg:pt-[121px] pb-20 lg:pb-[100px]">
+		<div class="flex flex-col lg:flex-row gap-12 lg:gap-0">
+			<div class="w-full lg:w-1/2">
+				<span>
+					<img src="assets/img/descriptive-services-01.jpg" class="rounded-[15px] md:rounded-[50px] effect-3d-image" alt="image">
+				</span>
+				<span class="pt-6 md:pt-[52px] flex items-baseline">
+					<span>
+						<h3 class="text-h-4 2xl:text-h-3 text-white font-bold">Gratis intake</h3>
+					</span>
+					<span>
+						<img src="/assets/img/icon-green-stars.png" class="h-[38px] lg:h-[60px]" alt="icon stars">
+					</span>
+				</span>
+				<p class="text-white text-lg/[32px] pt-3 xl:pt-7">Voordat je een behandeling bij ons ondergaat, vinden we het belangrijk om jouw wensen en gezondheid door te nemen. Dit doen we tijdens een gratis en vrijblijvend intakegesprek waarin we ál je vragen beantwoorden en je geruststellen waar nodig.</p>
+				<a href="/" class="btn btn-primary mt-7 !px-15">Plan jouw gratis intake</a>
+			</div>
+			<span class="hidden lg:block bg-white/60 w-px h-auto ml-18 xl:ml-32 2xl:ml-36 mr-12 xl:mr-24 2xl:mr-28"></span>
+			<div class="w-full lg:w-1/2">
+				<span>
+					<img src="assets/img/descriptive-services-02.jpg" class="rounded-[15px] md:rounded-[50px] effect-3d-image" alt="image">
+				</span>
+				<span class="pt-6 md:pt-[52px] flex items-baseline">
+					<span>
+						<h3 class="text-h-4 2xl:text-h-3 text-white font-bold">Kwaliteit en veiligheid op één</h3>
+					</span>
+					<span class="shrink-0 block">
+						<img src="/assets/img/icon-green-stars.png" class="h-[38px] lg:h-[60px]" alt="icon stars">
+					</span>
+				</span>
+				<p class="text-white text-lg/[32px] pt-3 xl:pt-7">Bij FillerHouse staan kwaliteit, hygiëne en veiligheid van jouw behandeling altijd op één. Onze specialisten zijn gecertificeerd in alle behandelingen die ze uitvoeren en werken volgens strikte protocollen. We werken dan ook uitsluitend met producten van A-kwaliteit en zijn altijd op de hoogte van de beste en nieuwste behandeltechnieken behandeltechnieken.</p>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="bg-off-white">
+	<div class="container pt-10 sm:pt-16 lg:pt-24 xl:pt-48 pb-[100px] relative">
+		<div class="hidden xl:block absolute top-[100px] right-9">
+			<img src="/assets/img/kiss-green.png" class="h-[8.75rem]" alt="green kiss image">
+		</div>
+		<div class="flex flex-col xl:flex-row justify-between gap-7 sm:gap-10 lg:gap-16 xl:gap-24 2xl:gap-48 relative z-20">
+			<div class="bg-cover bg-center bg-no-repeat w-full xl:w-1/2  2xl:w-[56%] rounded-[50px] flex items-end h-[21rem] sm:h-[30rem] md:h-[40rem] xl:h-auto xl:px-[51px] xl:pb-[59px] relative" style="background-image: url(/assets/img/bg-cta-home.jpg);">
+				<div class="hidden xl:block absolute bottom-0 inset-x-0 h-1/3 bg-gradient-to-t from-[#131418]/70 to-transparent rounded-b-[50px]"></div>
+				<ul class="hidden xl:block space-y-7 pt-4 relative z-20">
+					<li>
+						<a href="" class="flex items-center gap-3.5 text-h-5 text-white !leading-[26px] sm:leading-[26px]">
+							<img src="/assets/img/icon-location.png" class="shrink-0 h-[50px]" alt="icon location">
+							Burg. Groeneveld de Katerstraat 12 <br class="hidden 2xl:block"/>  3299 AB Maasdam
+						</a>
+					</li>
+					<li>
+						<span href="" class="flex items-center gap-3.5">
+							<img src="/assets/img/icon-phone.png" class="shrink-0 h-[50px]" alt="icon phone">
+							<span>
+								<a href="tel:06 27491577" class="block text-white text-h-5 !leading-[26px]">06 27491577</a>
+								<a href="mailto:info@fillerhouse.nl" class="block text-white text-h-5 !leading-[26px]" >info@fillerhouse.nl</a>
+							</span>
+						</span>
+					</li>
+				</ul>
+			</div>
+			<div class="w-full xl:w-1/2 2xl:w-[44%]">
+				<h2 class="text-h-4 sm:text-h-3 lg:text-h-2 font-bold text-black pb-5 sm:pb-7">Ask us anything!</h2>
+				<span class="text-h-5">
+					Benieuwd hoe FillerHouse jouw wereld een stukje mooier kan maken?
+					<span class="text-pink font-bold block">
+						Neem contact op!
+					</span>
+				</span>
+				<div class="block xl:hidden">
+					<ul class="space-y-7 pt-7 relative z-20">
+						<li>
+							<a href="" class="flex items-center gap-3.5 text-h-5 text-black !leading-[26px] sm:leading-[26px]">
+								<img src="/assets/img/icon-location.png" class="shrink-0 h-[35px]" alt="icon location">
+								Burg. Groeneveld de Katerstraat 12 <br class="hidden 2xl:block"/>  3299 AB Maasdam
+							</a>
+						</li>
+						<li>
+							<span href="" class="flex items-center gap-3.5">
+								<img src="/assets/img/icon-phone.png" class="shrink-0 h-[35px]" alt="icon phone">
+								<span>
+									<a href="tel:06 27491577" class="block text-black text-h-5 !leading-[26px]">06 27491577</a>
+									<a href="mailto:info@fillerhouse.nl" class="block text-black text-h-5 !leading-[26px]" >info@fillerhouse.nl</a>
+								</span>
+							</span>
+						</li>
+					</ul>
+				</div>
+				<form class="pt-7 md:pt-11">
+					<div class="pb-[22px]">
+						<span class="text-lg/[25px] text-[#7a7a7a] md:mb-2 flex items-center"> <span class="inline-block mr-2 bg-pink rounded-full p-1 md:p-1.5"></span>Naam:</span>
+						<input type="text" class="bg-white block w-full rounded-[15px] md:rounded-[40px] border-0 text-lg/[25px] text-black py-[22px] px-8 focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4">
+					</div>
+					<div class="pb-[22px]">
+						<span class="text-lg/[25px] text-[#7a7a7a] md:mb-2 flex items-center"> <span class="inline-block mr-2 bg-pink rounded-full p-1 md:p-1.5"></span>E-mailadres:</span>
+						<input type="text" class="bg-white block w-full rounded-[15px] md:rounded-[40px] border-0 text-lg/[25px] text-black py-[22px] px-8 focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4">
+					</div>
+					<div class="pb-[22px]">
+						<span class="text-lg/[25px] text-[#7a7a7a] md:mb-2 flex items-center"> <span class="inline-block mr-2 bg-pink rounded-full p-1 md:p-1.5"></span>Telefoonnummer:</span>
+						<input type="text" class="bg-white block w-full rounded-[15px] md:rounded-[40px] border-0 text-lg/[25px] text-black py-[22px] px-8 focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4">
+					</div>
+					<div class="pb-[19px]">
+						<span class="text-lg/[25px] text-[#7a7a7a] md:mb-2 flex items-center"> <span class="inline-block mr-2 bg-pink rounded-full p-1 md:p-1.5"></span>Bericht:</span>
+						<textarea name="" id="" cols="30" rows="3" class="bg-white block w-full rounded-[15px] md:rounded-[40px] border-0 text-lg/[25px] text-black py-[22px] px-8 focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4"></textarea>
+					</div>
+					<div class="flex flex-col-reverse md:flex-row gap-7 md:gap-12">
+						<div>
+							<button class="btn btn-primary px-[3rem] md:!px-[3.25rem] shrink-0">Verzenden</button>
+						</div>
+						<span class="text-[#7a7a7a] text-sm/[22px]">Met het versturen van deze gegevens ga je akkoord met onze <a href="/" class="underline">privacyverklaring</a></span>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+</div>
