--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="bg-pink-dark">
+<div class="bg-pink-dark z-50 relative">
 	<div class="container md:pt-[50px] pb-10 md:pb-[60px]">
 			<a href="/" class="relative -top-3 md:top-0">
 				<img src="/assets/img/logo-footer.svg" class="h-28 md:h-20 xl:h-24" alt="logo">
