Add about page second draft

--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -35,10 +35,10 @@ layout: "layouts/base.html"
 				</span>
 				<div class="w-full lg:w-1/2 flex flex-row lg:flex-col items-end gap-4 md:gap-9 lg:gap-0">
 					<span class="block w-1/2 lg:w-full">
-						<img src="assets/img/services-06.jpg" class="w-full rounded-[15px] md:rounded-[50px] effect-3d-image h-[262px] sm:h-[300px] lg:h-[163px] 2xl:h-[214px]  object-cover" alt="image">
+						<img src="/assets/img/services-06.jpg" class="w-full rounded-[15px] md:rounded-[50px] effect-3d-image h-[262px] sm:h-[300px] lg:h-[163px] 2xl:h-[214px]  object-cover" alt="image">
 					</span>
 					<span class="block w-1/2 lg:w-full pt-6">
-						<img src="assets/img/services-03.jpg" class="w-full rounded-[15px] md:rounded-[50px] effect-3d-image h-[210px] sm:h-[239px] lg:h-[239px]2xl:h-[314px] object-cover" alt="image">
+						<img src="/assets/img/services-03.jpg" class="w-full rounded-[15px] md:rounded-[50px] effect-3d-image h-[210px] sm:h-[239px] lg:h-[239px]2xl:h-[314px] object-cover" alt="image">
 					</span>
 				</div>
 			</div>
