--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -4,8 +4,100 @@ permalink: /about/
 layout: "layouts/base.html"
 ---
 
-<div class="bg-cover bg-top bg-no-repeat w-full min-h-[394px] md:min-h-[738px] relative overflow-hidden" style="background-image: url(/assets/img/bg-cta-home.jpg);">
+<div class="bg-cover bg-top bg-no-repeat w-full min-h-[394px] sm:min-h-[440px] md:min-h-[490px] lg:min-h-[550px] xl:min-h-[738px] relative overflow-hidden" style="background-image: url(/assets/img/bg-cta-home.jpg);">
 	<div class="absolute left-auto right-0 md:right-auto md:left-0 -bottom-3 md:-bottom-6 z-20 w-[125%] sm:w-auto">
-		<img src="/assets/img/section-shape-off-white.svg" class="transform md:-scale-x-100" alt="shape image">
+		<img src="/assets/img/section-shape-white.svg" class="transform md:-scale-x-100" alt="shape image">
+	</div>
+</div>
+<div class="relative overflow-hidden">
+	<div class="absolute top-[58rem] sm:top-[55rem] lg:top-[62rem] xl:top-[42rem] 2xl:top-[38rem] -left-6">
+		<img src="/assets/img/kiss-pink-dark.png" class="h-24 sm:h-28 xl:h-36 2xl:h-[10.5rem] transform rotate-[-25deg]" alt="pink kiss image">
+	</div>
+	<div class="container pt-6 sm:pt-10 xl:pt-32 pb-20 md:pb-24">
+		<div class="xl:px-20 2xl:px-40">
+			<div class="pb-12 lg:pb-24">
+				<div class="flex flex-col xl:flex-row gap-14 xl:gap-11 pb-32 md:pb-24">
+					<div class="w-full xl:w-2/5 2xl:w-1/2">
+						<span class="flex items-baseline">
+							<span>
+								<h3 class="text-h-4 md:text-h-3 xl:text-h-2 text-black font-bold">Over ons</h3>
+							</span>
+							<span class="pb-4 block">
+								<img src="/assets/img/icon-green-stars.png" class="h-[60px]" alt="icon stars">
+							</span>
+						</span>
+						<div class="pt-4 md:pt-7">
+							<p class="text-h-5 text-black">FillerHouse is een vertrouwd gezicht in de Hoeksche Waard en omgeving.
+								Ons kleine team van professionals is gespecialiseerd in filler behandelingen, huidverbetering en botox. Door het vertrouwde gevoel dat onze klanten bij ons krijgen én de grote variatie aan behandelingen weten al vele mensen, ook ver buiten de Hoeksche Waard, FillerHouse te vinden sinds 2020. </p>
+						</div>
+						<span class="pt-4 md:pt-5 block text-lime text-[42px]/[56px] font-yellowtail">Voel je vertrouwd</span>
+						<div class="mt-10 md:mt-7">
+							<a href="/" class="text-center !bg-[#e5055b] btn btn-primary md:!px-10">Plan jouw afspraak online</a>
+						</div>
+					</div>
+					<div class="w-full md:w-[96%] xl:w-[55%] 2xl:w-1/2 flex gap-3 md:gap-8 lg:gap-[51px]">
+						<span class="w-1/2">
+							<img src="/assets/img/testimonial-01.jpg" class="w-full rounded-[15px] md:rounded-[50px] effect-3d-image h-[235px] sm:h-[300px] lg:h-[436px] object-cover" alt="image">
+						</span>
+						<span class="w-1/2">
+							<span class="block pt-5 md:pt-[53px]">
+								<img src="/assets/img/testimonial-02.jpg" class="w-full rounded-[15px] md:rounded-[50px] effect-3d-image h-[235px] sm:h-[300px] lg:h-[436px] object-cover" alt="image">
+							</span>
+						</span>
+					</div>
+				</div>
+				<div class="flex flex-col lg:flex-row gap-12 md:gap-9">
+					<div>
+						<h3 class="text-[32px] lg:text-h-3 font-bold text-black">Kom gezellig langs</h3>
+						<p class="text-h-5 pt-4 lg:pt-8">Een bezoek aan FillerHouse is een feestje, waarbij jij met een glimlach weer naar buiten loopt. Onze ervaren skin specialist, arts of andere expert zorgt ervoor dat jij de persoonlijke behandeling krijgt die voor jou het beste resultaat geeft. Het mooie van ons werk is dat je soms met een minimale ingreep een ontzettend mooi resultaat kunt bereiken. Hallo zelfvertrouwen! </p>
+					</div>
+					<div>
+						<h3 class="text-[32px] lg:text-h-3 font-bold text-black">Safety first</h3>
+						<p class="text-h-5 pt-4 lg:pt-8">Door alleen met A-Kwaliteit merken te werken staat kwaliteit en veiligheid voorop en zorgen we ervoor dat jij 100% op je gemak bent. Geen vraag blijft onbeantwoord. Al onze behandelingen zijn erop gericht om jouw huid jeugdig te houden en om imperfecties in het gezicht op de meest natuurlijke manier te verhelpen. Sometimes, less is more!</p>
+					</div>
+				</div>
+			</div>
+			<div>
+				<h3 class="text-h-4 md:text-h-3 font-bold">Team fillerhouse</h3>
+				<div class="pt-7 md:pt-5 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-7 sm:gap-6 xl:gap-10">
+					<div>
+						<span>
+							<img src="/assets/img/madeline.jpg" class="w-full h-[250px] md:h-[280px] lg:h-[200px] xl:h-[250px] object-cover rounded-[25px] object-top" alt="madeline photo - team member">
+						</span>
+						<span class="pt-2 md:pt-3 block">
+							<span class="text-h-5 font-bold block">Madeline</span>
+							<span class="text-h-5 block">Wimper styliste </span>
+						</span>
+					</div>
+					<div>
+						<span>
+							<img src="/assets/img/manon.jpg" class="w-full h-[250px] md:h-[280px] lg:h-[200px] xl:h-[250px] object-cover rounded-[25px] object-top" alt="manon photo - team member">
+						</span>
+						<span class="pt-2 md:pt-3 block">
+							<span class="text-h-5 font-bold block">Manon</span>
+							<span class="text-h-5 block">Pmu artist</span>
+						</span>
+					</div>
+					<div>
+						<span>
+							<img src="/assets/img/claudia.jpg" class="w-full h-[250px] md:h-[280px] lg:h-[200px] xl:h-[250px] object-cover rounded-[25px] object-top" alt="claudia photo - team member">
+						</span>
+						<span class="pt-2 md:pt-3 block">
+							<span class="text-h-5 font-bold block">Claudia Jacobs</span>
+							<span class="text-h-5 block">Fillerexpert en CEO</span>
+						</span>
+					</div>
+					<div>
+						<span>
+							<img src="/assets/img/omaima.jpg" class="w-full h-[250px] md:h-[280px] lg:h-[200px] xl:h-[250px] object-cover rounded-[25px] object-top" alt="omaima photo - team member">
+						</span>
+						<span class="pt-2 md:pt-3 block">
+							<span class="text-h-5 font-bold block">Omaima</span>
+							<span class="text-h-5 block">Chirurg en cosmetische arts</span>
+						</span>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
