--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -1,8 +1,16 @@
-<div class="fixed top-0 inset-x-0 z-50">
+f
+<div class="fixed inset-x-0 top-0 z-50">
 	<div class="container py-12 lg:py-16 xl:py-20">
-		<div class="flex items-center justify-center lg:justify-between gap-10">
-			<a href="/" class="">
-				<img src="/assets/img/logo-footer.svg" class="h-24" alt="logo">
+		<div class="flex items-center justify-center gap-10 lg:justify-between">
+			<a
+				href="/"
+				class=""
+			>
+				<img
+					src="/assets/img/logo-footer.svg"
+					class="h-24"
+					alt="logo"
+				/>
 			</a>
 			<div class="hidden lg:block">
 				<button class="btn btn-primary">Menu</button>
